fix ref to location changes

--- a/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.html
+++ b/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.html
@@ -73,10 +73,10 @@
             <mat-expansion-panel class="location-panel">
               <mat-expansion-panel-header class="metadata-key">
                 <mat-panel-title>
-                  {{ location.lab }}
+                  {{ location.lab_y }}
                 </mat-panel-title>
                 <mat-panel-description>
-                  {{ location.numAliquots === 1 ? location.numAliquots + " aliquot" : location.numAliquots + " aliquots"}}
+                  {{ location.numAliquots_y === 1 ? location.numAliquots_y + " aliquot" : location.numAliquots_y + " aliquots"}}
                 </mat-panel-description>
               </mat-expansion-panel-header>
 
