--- a/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.scss
+++ b/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.scss
@@ -56,7 +56,8 @@ $old-color: accent-redder(600);
 }
 
 .both {
-  background: lighten(accent(50), 1%);
+  // background: lighten(accent(50), 1%);
+  background: $grey-50;
 }
 
 .left_only {
