--- a/sample-viewer/src/app/add-samples/preview-samples/preview-samples.component.scss
+++ b/sample-viewer/src/app/add-samples/preview-samples/preview-samples.component.scss
@@ -11,6 +11,7 @@
   font-weight: 400;
 }
 // Center text in table
+
 td.mat-cell,
 th.mat-header-cell {
   padding: 2px 10px;
@@ -26,6 +27,7 @@ th.mat-header-cell {
   text-align: start !important;
 }
 // Locations
+
 .lab {
   font-weight: 400;
 }
@@ -33,7 +35,8 @@ th.mat-header-cell {
 .location-group {
   padding: 5px 10px;
   margin: 10px;
-  background: $grey-50;
+  // background: $grey-50;
+  background: lighten(#cfe9d4, 10%); // green for new samples
 }
 
 .location-panel {
