fix syntax errs

--- a/sample-viewer/src/app/admin/about-data/about-data.component.html
+++ b/sample-viewer/src/app/admin/about-data/about-data.component.html
@@ -11,10 +11,13 @@
 
   <h4>Data overview</h4>
   <p>
-    Data was last updated on {{ dateModified | date: "d MMMM y" }}.
+    Data was last updated on {{ dataModified | date: "d MMMM y" }}.
   </p>
 
-  <!-- <h4>How the data are compiled</h4> -->
+  <!-- <h4>How the data are compiled</h4>
+  <p>
+    The majority of our data is provided to CViSB through a partnershup with the Kenema Government hospital in Sierra Leone.
+  </p> -->
 
   <h4><a routerLink="/schema">Schema</a></h4>
   <p>
