--- a/sample-viewer/src/app/admin/citation/citation.component.html
+++ b/sample-viewer/src/app/admin/citation/citation.component.html
@@ -6,6 +6,6 @@
   </p>
 
   <p>
-    The {{ cvisbCatalog.publisher[0]['name']}}, {{ currentYear | date:'yyyy' }}, "{{ cvisbCatalog.name }}", {{ cvisbCatalog.url }}, V{{ cvisbCatalog._version }}.
+    The {{ cvisbCatalog['publisher'][0]['name']}}, {{ currentYear | date:'yyyy' }}, "{{ cvisbCatalog['name'] }}", {{ cvisbCatalog['url'] }}, V{{ cvisbCatalog['_version'] }}.
   </p>
 </div>
