--- a/sample-viewer/src/app/admin/release-notes/release-notes.component.html
+++ b/sample-viewer/src/app/admin/release-notes/release-notes.component.html
@@ -1,24 +1,27 @@
-<div class="centered about-text">
+<div class="centered about-text" *ngIf="releaseNotes">
   <div class="container main-header">
     <h1>Release notes</h1>
 
-    <div class="container current-release">
+    <div class="container current-release" *ngIf="releaseVersion">
       <div class="current-label">
-        Current version
+        current version
       </div>
 
       <div class="version">
-        CViSB version {{ dataVersion }}
+        CViSB version {{ releaseVersion }}
       </div>
       <!-- <div class="updated">
       updated {{ dataModified | date: "d MMMM y" }}
     </div> -->
     </div>
+  </div>
 
+  <div class="disclaimer">
+    Note: only major versions with big changes are shown. In between releases, there may be minor changes, particularly to sample metadata.
   </div>
 
   <div class="release-notes" *ngFor="let release of releaseNotes">
-    <div class="container release-header" [ngClass]="{'current-release': release.version === dataVersion}">
+    <div class="container release-header" [ngClass]="{'current-release': release.version === releaseVersion}">
       <div class="version">
         CViSB version {{ release.version }}
       </div>
