update elisa css

--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -23,8 +23,14 @@
     <app-filter-patient-type [viruses]="patientSummary.patientTypes" [outcomes]="patientSummary.patientOutcomes" [all_cohorts]="all_cohorts" [all_outcomes]="all_outcomes" endpoint="patient"></app-filter-patient-type>
   </div>
 
-  <div class="filter-item filter-elisas">
-    <app-filter-elisas endpoint='patient'></app-filter-elisas>
+  <div class="wide-box container-column">
+    <div class="filter-item filter-elisas">
+      <app-filter-elisas endpoint='patient'></app-filter-elisas>
+    </div>
+
+    <div class="filter-item filter-expts">
+      <app-filter-experiment endpoint="patient"></app-filter-experiment>
+    </div>
   </div>
 
   <!-- <div class="filter-item filter-dates">
@@ -34,10 +40,6 @@
 
   <div class="filter-item filter-timepoints">
     <app-filter-sample-timepoints endpoint="patient"></app-filter-sample-timepoints>
-  </div>
-
-  <div class="filter-item filter-expts">
-    <app-filter-experiment endpoint="patient"></app-filter-experiment>
   </div>
 
   <div class="filter-item filter-ctry">
