--- a/sample-viewer/src/app/filters/filter-elisas/filter-elisas.component.scss
+++ b/sample-viewer/src/app/filters/filter-elisas/filter-elisas.component.scss
@@ -31,17 +31,26 @@ th {
 }
 
 #elisa-virus {
-  width: 130px;
+  width: 100px;
 }
 
 #elisa-assay {
-  width: 140px;
+  width: 95px;
 }
 
 #elisa-result {
-  width: 150px;
+  width: 120px;
 }
 
 #elisa-timepoint {
   width: 150px;
+}
+
+#elisa-assay,
+#elisa-result,
+#elisa-timepoint,
+#elisa-virus {
+  & mat-select-trigger {
+    font-size: 0.8em;
+  }
 }
