--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -23,9 +23,9 @@
     <app-filter-patient-type [viruses]="patientSummary.patientTypes" [outcomes]="patientSummary.patientOutcomes" [all_cohorts]="all_cohorts" [all_outcomes]="all_outcomes" endpoint="patient"></app-filter-patient-type>
   </div>
 
-  <div class="wide-box container-column">
+  <div class="filter-wide-container container-column">
     <div class="filter-item filter-elisas">
-      <app-filter-elisas endpoint='patient'></app-filter-elisas>
+      <app-filter-elisas endpoint="patient"></app-filter-elisas>
     </div>
 
     <div class="filter-item filter-expts">
