add mat tooltips for selected values

--- a/sample-viewer/src/app/filters/filter-elisas/filter-elisas.component.html
+++ b/sample-viewer/src/app/filters/filter-elisas/filter-elisas.component.html
@@ -3,37 +3,37 @@
 
   <form [formGroup]="elisaForm">
 
-    <mat-form-field class="form-selector" id="elisa-virus">
+    <mat-form-field class="form-selector" id="elisa-virus" matTooltipPosition="right" [matTooltip]='elisaForm.get("virus").value ? elisaForm.get("virus").value.join(" or ") : ""'>
       <mat-select placeholder="virus" formControlName="virus" multiple>
         <mat-select-trigger>
-          {{ elisaForm.get("virus").value ? elisaForm.get("virus").value.join(" or ") : ''}}
+          {{ elisaForm.get("virus").value ? elisaForm.get("virus").value.join(" or ") : "" }}
         </mat-select-trigger>
         <mat-option *ngFor="let virus of viruses" [value]="virus">{{ virus }}</mat-option>
       </mat-select>
     </mat-form-field>
 
-    <mat-form-field class="form-selector" id="elisa-assay">
+    <mat-form-field class="form-selector" id="elisa-assay" matTooltipPosition="right" [matTooltip] = 'elisaForm.get("assayType").value ? elisaForm.get("assayType").value.join(" or " ) : ""'>
       <mat-select placeholder="assay" formControlName="assayType" multiple>
         <mat-select-trigger>
-          {{ elisaForm.get("assayType").value ? elisaForm.get("assayType").value.join(" or ") : ''}}
+          {{ elisaForm.get("assayType").value ? elisaForm.get("assayType").value.join(" or " ) : "" }}
         </mat-select-trigger>
         <mat-option *ngFor="let assay of assays" [value]="assay">{{ assay }}</mat-option>
       </mat-select>
     </mat-form-field>
 
-    <mat-form-field class="form-selector" id="elisa-result">
+    <mat-form-field class="form-selector" id="elisa-result" matTooltipPosition="right" [matTooltip] = 'elisaForm.get("ELISAresult").value ? elisaForm.get("ELISAresult").value.join(" or " ) : ""'>
       <mat-select placeholder="result" formControlName="ELISAresult" multiple>
         <mat-select-trigger>
-          {{ elisaForm.get("ELISAresult").value ? elisaForm.get("ELISAresult").value.join(" or ") : ''}}
+          {{ elisaForm.get("ELISAresult").value ? elisaForm.get("ELISAresult").value.join(" or " ) : "" }}
         </mat-select-trigger>
         <mat-option *ngFor="let result of results" [value]="result">{{ result }}</mat-option>
       </mat-select>
     </mat-form-field>
 
-    <mat-form-field class="form-selector" id="elisa-timepoint">
+    <mat-form-field class="form-selector" id="elisa-timepoint" [matTooltip] = 'elisaForm.get("timepoint").value ? elisaForm.get("timepoint").value.join(" or ").replace("survivor enrollment", "survivor").replace("acute patient enrollment", "acute" ) : ""' matTooltipPosition="right">
       <mat-select placeholder="timepoint" formControlName="timepoint" multiple>
         <mat-select-trigger>
-          {{ elisaForm.get("timepoint").value ? elisaForm.get("timepoint").value.join(" or ").replace("survivor enrollment", "survivor").replace("acute patient enrollment", "acute") : ''}}
+          {{ elisaForm.get("timepoint").value ? elisaForm.get("timepoint").value.join(" or ").replace("survivor enrollment", "survivor").replace("acute patient enrollment", "acute" ) : "" }}
         </mat-select-trigger>
         <mat-option *ngFor="let timepoint of timepoints" [value]="timepoint">{{ timepoint }}</mat-option>
       </mat-select>
