--- a/sample-viewer/src/app/filters/filter-sample-type/filter-sample-type.component.html
+++ b/sample-viewer/src/app/filters/filter-sample-type/filter-sample-type.component.html
@@ -10,11 +10,47 @@
     </form>
 
 
-    <!-- <div>
-      <mat-checkbox class="lab-name" color="primary">
+    <div>
+      <mat-checkbox class="include-used-up" color="primary" [(ngModel)]="include_empty_samples" (ngModelChange)="filterEmptySamples(inclSpent)">
         include used up samples
       </mat-checkbox>
-    </div> -->
+    </div>
+
+
+    <!-- <div id="interest">
+
+    <div class="interest-list">
+
+        <form [formGroup]="interestFormGroup" *ngIf="interestFormGroup">
+
+            <div *ngFor="let interest of interests; let i = index" >
+                <mat-checkbox class="example-margin"
+                (change)="onChange($event)" [value]="interest">{{interest}}</mat-checkbox>
+            </div>
+
+        </form>
+
+    </div>
+
+</div> -->
+
+    <!-- <div id="interest">
+
+    <div class="interest-list">
+
+        <form [formGroup]="arr">
+
+            <div *ngFor="let interest of ['Nancy', 'Drew', 'books']; let i = index" >
+                <mat-checkbox class="example-margin"
+                (change)="onChange($event)" [value]="interest">{{interest}}</mat-checkbox>
+            </div>
+
+        </form>
+
+    </div>
+
+</div> -->
+
 
   </div>
 </div>
