--- a/sample-viewer/src/app/filters/filter-sample-type/filter-sample-type.component.html
+++ b/sample-viewer/src/app/filters/filter-sample-type/filter-sample-type.component.html
@@ -1,7 +1,7 @@
 <div class="filter-sample-type container-column">
   <h4 class="filter-label">sample type</h4>
 
-  <div class="container">
+  <div class="container-column">
 
     <form [formGroup]="myForm">
       <div *ngFor="let type of sample_types">
