update sample type css

--- a/sample-viewer/src/app/filters/filter-sample-type/filter-sample-type.component.html
+++ b/sample-viewer/src/app/filters/filter-sample-type/filter-sample-type.component.html
@@ -10,8 +10,8 @@
     </form>
 
 
-    <div>
-      <mat-checkbox class="include-used-up" color="primary" [(ngModel)]="include_empty_samples" (ngModelChange)="filterEmptySamples($event)">
+    <div class="include-used-up">
+      <mat-checkbox color="primary" [(ngModel)]="include_empty_samples" (ngModelChange)="filterEmptySamples($event)">
         include used up samples
       </mat-checkbox>
     </div>
