--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -33,9 +33,9 @@
     </div>
   </div>
 
-  <!-- <div class="filter-item filter-dates">
+  <div class="filter-item filter-dates">
     <app-filter-sample-year [data]="patientSummary.patientYears" [yearDomain]="all_years" endpoint="patient"></app-filter-sample-year>
-  </div> -->
+  </div>
 
 
   <div class="filter-item filter-timepoints">
