allow matthias ability to wipe samples

--- a/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
+++ b/sample-viewer/src/app/add-samples/sample-upload/sample-upload.component.html
@@ -27,7 +27,7 @@
   </div>
 
   <!-- TEMPORARY: JUST FOR ME WHILE TESTING -->
-  <div style="margin-top: 25px;" *ngIf="user.email === 'laura.d.hughes@gmail.com'">
+  <div style="margin-top: 25px;" *ngIf="user.email === 'laura.d.hughes@gmail.com' || user.email === 'mpauthner@gmail.com'">
     <button type="button" mat-raised-button color="warn" (click)="deleteSamples()">DON'T PRESS THIS BUTTON -- clears sample list</button>
   </div>
 
