--- a/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
+++ b/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
@@ -22,6 +22,10 @@
     <app-filter-sample-type></app-filter-sample-type>
   </div>
 
+  <div class="filter-item filter-sample-group">
+    <app-filter-sample-group></app-filter-sample-group>
+  </div>
+
   <div class="filter-item filter-sample-timepoints">
     <app-filter-sample-timepoints [endpoint]="'sample'"></app-filter-sample-timepoints>
   </div>
