--- a/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
+++ b/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
@@ -3,11 +3,18 @@
 
   <div class="filter-subtype filter-virus">
     <h5 class="filter-sublabel">cohort</h5>
+    <div class="disclaimer">
+      <!-- 'cohort' indicates  -->
+      suspected infection/exposure, pending diagnostic confirmation
+    </div>
     <app-mini-donut [data]="viruses" [height]="plot_height" [cohorts]="all_cohorts" [endpoint]="endpoint"></app-mini-donut>
   </div>
 
   <div class="filter-subtype filter-outcome">
     <h5 class="filter-sublabel">outcome</h5>
+    <div class="disclaimer">
+      survivors were alive 10+ days after hospital admission
+    </div>
     <app-mini-barplot [data]="outcomes" [name_var]="'term'" [height]="plot_height" [options]="all_outcomes" [endpoint]="endpoint"></app-mini-barplot>
   </div>
 </div>
