--- a/sample-viewer/src/app/dataset-page/dataset-page.component.html
+++ b/sample-viewer/src/app/dataset-page/dataset-page.component.html
@@ -12,7 +12,8 @@
 
       <div class="dataset-header" id="summary">
         <h2>
-          <a (click)="selectDataset($event, dataset)" [matTooltip]="'view metadata for ' + dataset.name + ' dataset'">{{ dataset.name }}</a>
+          <a>{{ dataset.name }}</a>
+          <!-- <a (click)="selectDataset($event, dataset)" [matTooltip]="'view metadata for ' + dataset.name + ' dataset'">{{ dataset.name }}</a> -->
           <span class="keyword" *ngFor="let keyword of dataset.keywords">{{ keyword }}</span>
         </h2>
 
