--- a/sample-viewer/src/app/dataset/file-list/file-list.component.html
+++ b/sample-viewer/src/app/dataset/file-list/file-list.component.html
@@ -7,7 +7,8 @@
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">File</th>
       <td mat-cell *matCellDef="let element">
-        <a [href]="element.contentUrl" (click)="selectFile($event, element)" [matTooltip]="'view metadata for ' + element.name">{{element.name}}</a>
+        <a [href]="element.contentUrl" (click)="selectFile($event, element)" target="_blank" rel="noreferrer"
+        [matTooltip]="'download ' + element.name">{{element.name}}</a>
       </td>
     </ng-container>
 
