--- a/sample-viewer/src/app/patient-page/patient-hla/patient-hla.component.html
+++ b/sample-viewer/src/app/patient-page/patient-hla/patient-hla.component.html
@@ -8,9 +8,7 @@
 
     <div class="hla-files">
       <h5 class="patient-data">files</h5>
-      <div *ngFor="let file of files">
-        <app-patient-files [datadownload]="file"></app-patient-files>
-      </div>
+      <app-file-list [datasetID]="hla" [patientID]="patient.patientID"></app-file-list>
     </div>
 
     <div class="hla-genotype">
