--- a/sample-viewer/src/app/dataset/file-list/file-list.component.html
+++ b/sample-viewer/src/app/dataset/file-list/file-list.component.html
@@ -1,6 +1,6 @@
 <!-- DATA FILE LOOP -->
 <!-- <div class="data-download" *ngFor="let file of dataSource.data.slice(0,1)" [ngClass]="anything_selected ? (file.selected ? 'active' : 'inactive') : 'active'"> -->
-<div class="file-lists">
+<div class="file-lists" *ngIf="dataSource && dataSource.data.length > 0">
   <table mat-table [dataSource]="dataSource" class="data-download" matSort [id]="datasetID | stripWhitespace">
 
     <!-- Name Column -->
