files to patient:viralseq

--- a/sample-viewer/src/app/patient-page/patient-page.component.html
+++ b/sample-viewer/src/app/patient-page/patient-page.component.html
@@ -77,7 +77,7 @@
         </div>
 
         <app-patient-hla [patient]="patient" [files]="HLAFiles"></app-patient-hla>
-        <app-patient-viral-seq [sequences]="viralSeq" [files]="viralFiles"></app-patient-viral-seq>
+        <app-patient-viral-seq [sequences]="viralSeq" [files]="viralFiles" [patientID]="patient.patientID"></app-patient-viral-seq>
 
         <app-patient-serology [patient]="patient"></app-patient-serology>
       </div>
