--- a/sample-viewer/src/app/dataset/file-list/file-list.component.html
+++ b/sample-viewer/src/app/dataset/file-list/file-list.component.html
@@ -53,6 +53,5 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="anything_selected ? (row === selectedRow ? 'active' : 'inactive') : 'active'"></tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20, 100]" [pageSize]="5" showFirstLastButtons></mat-paginator>
-  <!-- <mat-paginator [length]="downloads?.downloadLength" [pageSizeOptions]="[5, 10, 20, 100]" [pageSize]="5" showFirstLastButtons></mat-paginator> -->
+  <mat-paginator [length]="dataSource.resultCountState$ | async" [pageSizeOptions]="[5, 10, 20, 100]" [pageSize]="5" showFirstLastButtons></mat-paginator>
 </div>
